k8s/overlays/development/env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qxsms
spec:
  template:
    spec:
      containers:
        - name: qxsms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  template:
    spec:
      containers:
        - name: worker
